# tickets

./: .gitignore  LICENSE  README.md  local.settings.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_tickets.yml
HandleApproach/: __init__.py  function.json
static/: index.js
static/CSS/: tin.css  tout.css
templates/: index.html
