[tool.poetry]
name = "tickets"
version = "0.0.1"
description = ""
authors = ["cdelaof26"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "~3.1.2"
azure-functions = "*"
PyMuPDF = "~1.26.4"
flask-cors = "~6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
